<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="Block64Words" Id="{22551456-50c8-4d99-a991-13df112cc76d}">
    <Declaration><![CDATA[TYPE Block64Words :
STRUCT
	reserved : ARRAY[1..64] of word;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>