<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <GVL Name="GVL" Id="{e607aa11-c301-416f-9cbc-bc4f43af5299}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL 
	//for downstream
	downstreamSyncEngaged AT%MB127 : BOOL;
	downstreamSyncAcknowledged AT%MB128 : BOOL;
	//downstreamSyncAcknowledged  : BOOL;

	//testValue1 AT%MW0 : WORD;
	//testValue2 AT%MW1 : WORD;
	blockData AT%Mb512 : commUnit;
	//
	//fakeInput AT%I* : bool;
	ioMonitor AT%I* : ARRAY[1..64] OF BOOL; //64points , would occupied 64bytes
	ioOverride AT%Q* : ARRAY[1..64] OF BOOL;
	
	testOutput1 AT%Q* : BOOL;
	testOutput2 AT%Q* : BOOL;	
	
	materialSlots : ARRAY[1..4] OF Block128Words;	
	axisControls: ARRAY[1..9] OF RunAxis;
	stations : ARRAY[1..8] OF POINTER TO RunUnitGeneric;
	
	cylinderControls : ARRAY[1..32] OF RunCylinder;
	signalControls : ARRAY[1..16] OF RunSignal;
	
	bObjectsLinked : BOOL;
END_VAR
VAR_GLOBAL PERSISTENT
	testPara : ParameterSet;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>